[project]
name = "streamhead-mailerlite-tools"
version = "0.1.0"
description = "Tools for MailerLite campaign management and archiving"
authors = ["Peter Backx <peter@streamhead.com>"]
requires-python = ">=3.14,<4"
dependencies = [
    "requests",
    "python-dotenv",
    "markdownify",
    "beautifulsoup4"
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]

[tool.uv]
# UV is used for dependency management
